[tool.poetry]
name = "3dcv"
version = "0.1.0"
description = ""
authors = ["harshmunshi <harshmunshi03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"
black = "^23.3.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
